Clean up chunk api